Alignment fix
Improving readability on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -442,7 +442,7 @@
 					ul.actions li {
 						display: block;
 						padding: 1em 0 0 0;
-						text-align: center;
+						text-align: left;
 						width: 100%;
 					}
 
